update eslint rule

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "think-csrf",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "CSRF for ThinkJS 3.x",
   "main": "index.js",
   "dependencies": {
@@ -11,6 +11,7 @@
     "babel-eslint": "^7.2.1",
     "coveralls": "^2.13.0",
     "eslint": "^3.18.0",
+    "eslint-config-think": "^1.0.1",
     "koa": "^2.2.0",
     "nyc": "^10.2.0",
     "supertest": "^3.0.0",
@@ -19,7 +20,9 @@
     "think-session-file": "^1.0.5"
   },
   "scripts": {
-    "test": "eslint index.js && nyc ava test/index.js"
+    "test": "eslint index.js lib/ && nyc ava test/index.js",
+    "lint": "eslint index.js lib/",
+    "lint-fix": "eslint --fix index.js lib/"
   },
   "repository": {
     "type": "git",
